--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="/2/007.html"><h2>007</h2></a>
         </div>
         <div class="iteam">
-            <a href="#"><h2>Hello</h2></a>
+            <a href="/3/show-hide.html"><h2>Show hide on hover</h2></a>
         </div>
         <div class="iteam">
             <a href="#"><h2>Hello</h2></a>
