--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="/3/show-hide.html"><h2>Show hide on hover</h2></a>
         </div>
         <div class="iteam">
-            <a href="#"><h2>Hello</h2></a>
+            <a href="/4/pop-btn.html"><h2>Pop Btn</h2></a>
         </div>
         <div class="iteam">
             <a href="#"><h2>Hello</h2></a>
